[package]
name = "process_ghosting"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for binary size, at cost of binary speed
lto = true          # Optimise compilation units at link stage
codegen-units = 1   # Use single codegen unit for maximum optimisation, at cost of compile speed
panic = "abort"     # Perform no code unwinding on panics. Just abort.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_IO",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices"
]